[gd_scene load_steps=10 format=3 uid="uid://cwulolttkwmtq"]

[ext_resource type="Script" path="res://Scenes/User_Interface/workshop_ui.gd" id="1_gwo4e"]
[ext_resource type="Texture2D" uid="uid://bd3nx0xolp5r3" path="res://Textures/workshop texture.png" id="2_2j7m4"]
[ext_resource type="FontFile" uid="uid://n2hi7q5233s6" path="res://Scenes/User_Interface/Assets/upheavtt.ttf" id="3_21cox"]
[ext_resource type="Script" path="res://Scenes/User_Interface/ExitButton.gd" id="3_kpt66"]
[ext_resource type="Script" path="res://Scenes/User_Interface/workshop_turret_grid.gd" id="4_bcs8p"]
[ext_resource type="StyleBox" uid="uid://bm0pqvcmneeo8" path="res://Scenes/User_Interface/Assets/large_button_normal.tres" id="4_f3fin"]
[ext_resource type="StyleBox" uid="uid://cvl1ljoole1y1" path="res://Scenes/User_Interface/Assets/large_button_hover.tres" id="5_1afix"]
[ext_resource type="StyleBox" uid="uid://dilydepx8qv76" path="res://Scenes/User_Interface/Assets/large_button_clicked.tres" id="6_mtoua"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nlldh"]

[node name="Workshop UI" type="Node"]
script = ExtResource("1_gwo4e")

[node name="Background Texture" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2j7m4")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Turrets" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabsContainer" type="CenterContainer" parent="CanvasLayer/Turrets"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Turrets/TabsContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Turrets/TabsContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Turrets/TabsContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InvButton" type="Button" parent="CanvasLayer/Turrets/TabsContainer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.658824, 0.458824, 0, 1)
theme_override_fonts/font = ExtResource("3_21cox")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("4_f3fin")
theme_override_styles/hover = ExtResource("5_1afix")
theme_override_styles/pressed = ExtResource("6_mtoua")
text = "Turrets"

[node name="GachaButton" type="Button" parent="CanvasLayer/Turrets/TabsContainer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.658824, 0.458824, 0, 1)
theme_override_fonts/font = ExtResource("3_21cox")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("4_f3fin")
theme_override_styles/hover = ExtResource("5_1afix")
theme_override_styles/pressed = ExtResource("6_mtoua")
text = "Gacha"

[node name="ProfileButton" type="Button" parent="CanvasLayer/Turrets/TabsContainer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.658824, 0.458824, 0, 1)
theme_override_fonts/font = ExtResource("3_21cox")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("4_f3fin")
theme_override_styles/hover = ExtResource("5_1afix")
theme_override_styles/pressed = ExtResource("6_mtoua")
text = "Profile"

[node name="ExitButton" type="Button" parent="CanvasLayer/Turrets/TabsContainer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.658824, 0.458824, 0, 1)
theme_override_fonts/font = ExtResource("3_21cox")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("4_f3fin")
theme_override_styles/hover = ExtResource("5_1afix")
theme_override_styles/pressed = ExtResource("6_mtoua")
text = "Exit
"
script = ExtResource("3_kpt66")

[node name="TurretsContainer" type="CenterContainer" parent="CanvasLayer/Turrets"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -238.0
offset_right = 476.0
offset_bottom = 238.0
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Turrets/TurretsContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_nlldh")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Turrets/TurretsContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 25

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Turrets/TurretsContainer/PanelContainer/MarginContainer"]
clip_contents = false
custom_minimum_size = Vector2(1000, 800)
layout_mode = 2
size_flags_horizontal = 0

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Turrets/TurretsContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
script = ExtResource("4_bcs8p")

[node name="UpgradeContainer" type="CenterContainer" parent="CanvasLayer/Turrets"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -532.0
offset_top = -176.0
offset_bottom = 176.0
grow_horizontal = 0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Turrets/UpgradeContainer"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
color = Color(0, 0, 0, 0.356863)

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Turrets/UpgradeContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_nlldh")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Turrets/UpgradeContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Turrets/UpgradeContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TurretName" type="Label" parent="CanvasLayer/Turrets/UpgradeContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
text = "TURRET NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurretPreview" type="TextureRect" parent="CanvasLayer/Turrets/UpgradeContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
size_flags_vertical = 3
expand_mode = 4

[node name="StatChange" type="Label" parent="CanvasLayer/Turrets/UpgradeContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 21
text = "New stats
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResourcesNeeded" type="Label" parent="CanvasLayer/Turrets/UpgradeContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 21
text = "Resources Required
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeButton" type="Button" parent="CanvasLayer/Turrets/UpgradeContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 26
text = "UPGRADE"

[connection signal="pressed" from="CanvasLayer/Turrets/TabsContainer/PanelContainer/MarginContainer/HBoxContainer/InvButton" to="." method="_on_inv_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Turrets/TabsContainer/PanelContainer/MarginContainer/HBoxContainer/GachaButton" to="." method="_on_gacha_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Turrets/TabsContainer/PanelContainer/MarginContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
